# CW_6_Django

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/: apps.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html
config/: settings.py
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: send.py
mailing/migrations/: 0001_initial.py  0002_alter_mailingsettings_start_time.py  0002_initial.py  0003_alter_mailingsettings_end_time_and_more.py  0004_alter_mailingsettings_end_time_and_more.py  0005_alter_mailingsettings_options_remove_client_comment_and_more.py
mailing/services/: send_mails.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  contacts.html  mailingclient_list.html  mailingsettings_confirm_delete.html  mailingsettings_form.html  mailingsettings_list.html  message_confirm_delete.html  message_form.html  messages.html
mailing/templatetags/: tags_filters.py
static/css/: style.css  style2.css
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/services/: random_password.py
users/templates/users/: login.html  random_password_form.html  recover_password.html  register.html  send_activate_mail.html  user_form.html
